# deprecated-LLaMaPUn

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANUAL.md  Makefile.PL  README.md
clib/: CMakeList_thirdparty.txt  CMakeLists.txt  FindJson.cmake  README.md  dnmlib.c  dnmlib.h  jsoninclude.h  jsonincludecheck.sh  language_detector.c  leak_check.sh  libtextcatconf.txt  llamapun_cortex_interface.c  llamapun_cortex_interface.h  llamapun_ngrams.c  llamapun_ngrams.h  llamapun_ngrams_old.c  llamapun_ngrams_old.h  llamapun_para_discr.c  llamapun_para_discr.h  llamapun_senna_pos.c  llamapun_senna_pos.h  llamapun_tokenizer.c  llamapun_tokenizer.h  llamapun_utils.c  llamapun_utils.h  ngram_merge.c  ngram_merge.h  normalizer.c  normalizer.h  old_dnmlib.c  old_dnmlib.h  preprocessor.c  preprocessor.h  stemmer.c  stemmer.h  stopwords.c  stopwords.h  stopwords.json  unicode_normalizer.c  unicode_normalizer.h
clib/morpha/: README  morpha.lex.original  morpha.yy.c
clib/tests/: combined_test.c  dnmlib_test.c  ngrams_test.c  normalizer_test.c  senna_post_test.c  stemmer_test.c  stopwords_test.c  tokenization_test.c  unicode_normalizer_test.c
config/: Doxyfile  libtextcatconf.txt
doc/: documentation.tex  llamapun_clib_doc.tex
doc/bluenotes/: bluenote.cls  para_discr_bagofwords.tex
doc/clib_documentation/html/: annotated.html  classes.html  dnmlib_8h.html  dnmlib_8h_source.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  group__dnmlib.html  group__ngrams.html  group__old__dnmlib.html  group__para__discr.html  group__stemmer.html  group__stopwords.html  group__unicode__normalizer.html  index.html  jsoninclude_8h_source.html  llamapun__ngrams_8h.html  llamapun__ngrams_8h_source.html  llamapun__ngrams__old_8h_source.html  llamapun__para__discr_8h.html  llamapun__para__discr_8h_source.html  llamapun__senna__pos_8h_source.html  llamapun__tokenizer_8h_source.html  llamapun__utils_8h_source.html  md_README.html  modules.html  old__dnmlib_8h.html  old__dnmlib_8h_source.html  pages.html  preprocessor_8h_source.html  stemmer_8h.html  stemmer_8h_source.html  stopwords_8h.html  stopwords_8h_source.html  struct__dnmRange.html  struct__dnmRanges.html  structdnmStruct.html  (+16 more)
doc/clib_documentation/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_1.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  groups_1.js  groups_2.js  groups_4.js  groups_5.js  pages_0.js  search.js  typedefs_0.js
lib/: LLaMaPUn.pm
lib/LLaMaPUn/: LaTeXML.pm  Preprocessor.pm  Tokenizer.pm  Util.pm
lib/LLaMaPUn/Preprocessor/: MarkTokens.pm  Purify.pm
lib/LLaMaPUn/Util/XML/: Equivalence.pm  SharedPacked.pm
lib/LLaMaPUn/Util/XML/Equivalence/: Light.pm
lib/LLaMaPUn/resources/LaTeXML/: LaTeXML-TEI-xhtml.xsl
src/llamapun/: CMakeLists.txt  crf.c  crf.h  dnmlib.c  dnmlib.h  document_loader.c  document_loader.h  gt_estimate.c  language_detection.c  language_detection.h  ngrams.c  ngrams.h  senna_pos.c  senna_pos.h  stemmer.c  stemmer.h  stopwords.c  stopwords.h  tokenizer.c  tokenizer.h  unicode_normalizer.c  unicode_normalizer.h  utils.c  utils.h  word_normalizer.c  word_normalizer.h
src/scripts/: CMakeLists.txt  config.sh  countWordOccurences.py  evaluate_tokenization.c  frequent_ngrams_to_list.py  jsonincludecheck.sh  leak_check.sh  run_libsvm_experiment.py  set_file_path.sh
src/tasks/: CMakeLists.txt  addPostToDom.c  compute_ngram_idf.c  evaluate_tokenization.c  extract_ngrams.c  find_ngrams.c  gen_IDF.c  gen_TF_IDF.c  gen_libsvm_input.c  gen_libsvm_input_2.c  gen_rnnlm_input.c  language_detector.c  parallel_language_detector.c  parallel_libsvm_input.c  parallel_libsvm_input_3.c  parallel_libsvm_input_occurence.c  parallel_libsvm_ngrams_extended.c  simplify_documents.c  train_DD.c
t/: 01_basic.t  02_preprocess.t  03_latexml.t  gentests.pl
t/documents/: 1311.0066.html  1311.6767.tex  1311.6767.xhtml  1311.6767.xml  1311.6767_tokenized.xml  entry216.tex  entry216.xhtml  entry216.xml  entry216_tokenized.xml  sample_TEI_xhtml.xhtml  sample_document.tex  sample_document.xml  sample_tokenized.xml
test/: CMakeLists.txt  combined_test.c  language_test.c  ngrams_test.c  para_discr_test.c  senna_post_test.c  stemmer_test.c  stopwords_test.c  tokenization_test.c  unicode_normalizer_test.c
test/test_working_directory/: readme.txt
